style.css
* {
    margin: 0px;
    padding: 0px;
    list-style: none;
}

html {
    font-family: "Roboto";
    width: 100%;
    height: 100%;
}

.logo {
    color: #F9FAF8;
    font-size: 24px;
    font-weight: bold;
    flex: 1 1 100%;
}

.menu {
    display: flex;
    align-items: center;
    min-height: 60px;
    background-color: #1F2937;
    padding-right: 10%;
    padding-left: 10%;
    
}

.nav_menu {
    font-size: 18px;
    color: #E5E7EB;
    margin: 0.75em;
    margin-left: 0em;
}

li {
    flex-shrink: 0;
}

.hero {
    background-color: #1F2937;
    color: #F9FAF8;
    display: flex;
    padding-top: 5%;
    padding-bottom: 5%;
    padding-left: 10%;
    padding-right: 10%;
    align-items: center;
    justify-content: center;
}

.hero h2 {
    font-size: 48px;
    font-weight: 900;
}

.hero > p {
    font-size: 18px;
}

button {
    background-color: #3882F6;
    color: #F9FAF8;
    border: none;
    font-size: 16px;
    font-weight: bold;
    padding: 8px 25px;
    border-radius: 5px;
    max-width: 8em;
    align-items: center;
    margin-top: 0.5em;
}

.hero img {
    width: 400px;
    height: 200px;
    background-color: lightgrey;
}

.hero-text {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    flex-basis: 0;
    min-width: 400px;
    min-height: 200px;
    margin-right: auto;
}

.hero-img {
    flex-basis: 0;
    margin-left: auto;
}

.random h2 {
    text-align: center;
    margin: 1.5em 0em;
    font-size: 36px;
    color: #1F2937
}

.random {
    margin-top: 1.5em;
    margin-bottom: 6em
}

.random ul {
    display: flex;
    justify-content: center;
    gap: 30px;
    
}

.random img {
    border: 4px solid #3882F6;
    border-radius: 0.7em;
    width: 120px;
    height: 120px;
    background-color: whitesmoke;

}

.random li {
    display: flex;
    flex-direction: column;
    gap: 10px;
}
.random p {
    flex-wrap: wrap;
    max-width: 150px;
    color: rgb(104, 104, 104);
}

